--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arena fitnes</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+
+
+
+    <!-- HEADER -->
+
+    <header class="header">
+        <div class="header__logo">
+            <img src="" alt="">
+        </div>
+        <nav class="header__menu">
+            <ul>
+                <li>О клубе</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <div class="header__contact">
+            <div class="header__phone">
+                <a href=""></a>
+            </div>
+            <div class="header__call">
+
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
