made team block

--- a/src/index.html
+++ b/src/index.html
@@ -309,6 +309,48 @@
             </div>
         </div>
     </section>
+
+
+    <!-- PRICELIST -->
+
+    <section class="pricelist">
+
+    </section>
+
+
+
+    <!-- STUDIO -->
+
+    <section class="studio">
+        <div class="container">
+
+        </div>
+    </section>
+
+
+
+    <!-- TEAM -->
+
+    <section class="team">
+        <div class="container">
+            <h2 class="team__title">Наша команда</h2>
+            <div class="leader-card">
+                <div class="leader-card__photo">
+                    <img src="img/Andrey_photo.jpg" alt="men">
+                </div>
+                <div class="leader-card__text">
+                    <div class="leader-card__name">Андрей Кравцов</div>
+                    <div class="leader-card__position">управляющий фитнес клуба</div>
+                    <hr>
+                    <div class="leader-card__descr">Привет! Я очень рад, что твое внимание привлек наш фитнес клуб ARENA. <br><br>
+                        Мой опыт в фитнесе начался в 2008 году с тренерской деятельности, довелось поработать координатором тренажерного зала, и в 2014 году я, найдя инвестора, открыл двери Арены.
+                    </div>
+                    <button class="button button_leader-card">Читать полностью</button>
+                </div>
+            </div>
+            <h3 class="team__subtitle">Тренеры</h3>
+        </div>
+    </section>
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
