--- a/src/index.html
+++ b/src/index.html
@@ -349,12 +349,210 @@
                 </div>
             </div>
             <h3 class="team__subtitle">Тренеры</h3>
+            <ul class="team__tabs">
+                <li class="team__tab team__tab_active">Персональные тренировки</li>
+                <li class="team__tab">Групповые тренировки</li>
+                <li class="team__tab">Зал единоборств</li>
+            </ul>
+            <div class="team__content team__content_active">
+                <div class="team__corusel">
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="team__content">
+                <div class="team__corusel-2">
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team__card team__card_solo-1">
+                            <div class="team__name">Борис Пермяков</div>
+                            <button class="button button_card">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="team__content">
+                <div class="team__box">
+                    <div class="team__card team__card_solo-1">
+                        <div class="team__name">Борис Пермяков</div>
+                        <button class="button button_card">Подробнее</button>
+                    </div>
+                    <div class="team__card team__card_solo-1">
+                        <div class="team__name">Борис Пермяков</div>
+                        <button class="button button_card">Подробнее</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+
+
+
+    <!-- INSTAFEED -->
+
+    <section class="instafeed">
+        <div class="container">
+            <h2 class="instafeed__title">Мы в Instagram</h2>
+            <div id="instafeed" class="instafeed__gallery"></div>
+        </div>
+    </section>
+
     
+    
+    <!-- PARTNER -->
+
+    <section class="partner">
+        <div class="container">
+            <h2 class="partner__title"> Наши партнеры</h2>
+            <div class="partner__logos">
+                <div class="partner__logo">
+                    <img src="img/logo1.png" alt="">
+                </div>
+                <div class="partner__logo">
+                    <img src="img/logo2.png" alt="">
+                </div>
+                <div class="partner__logo">
+                    <img src="img/logo3.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.instagramFeed.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
