--- a/src/index.html
+++ b/src/index.html
@@ -549,6 +549,66 @@
 
 
 
+    <!-- PRESENT -->
+
+    <section class="present">
+        <div class="container">
+            <div class="present__wraper">
+                <div class="present__form-wraper">
+                    <div class="present__title">Дарим персональную тренировку в подарок!</div>
+                    <form action="#" class="present__form">
+                        <input name="name" required placeholder="Имя" type="text">
+                        <input name="phone" required placeholder="Телефон" type="number">
+                        <input name="email" required placeholder="Email" type="email">
+                        <button class="button button_form">Получить подарок</button>
+                    </form>
+                </div>
+                <div class="present__img">
+                    <img src="icons/present_icon.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- MAP -->
+
+    <sectiom class="map">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Abdeac04e31701771896f49c48b9cc8abb1543d5a2bcc37f0eb71aff72a58283a&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
+    </sectiom>
+
+
+
+    <!-- FOOTER -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wraper">
+                <div class="footer__contacts">
+                    <a href="tel:+73422922378" class="footer__phone">+7 (342) 292-23-78</a>
+                    <div class="footer__adres">г. Пермь, ул. Пермская, 7,<br>ТЦ "Разгуляй", 4 этаж</div>
+                    <div class="footer__email">info@agf.club</div>
+                </div>
+                <div class="footer__info">
+                    <div class="footer__privacy">© 2015 – 2021. Арена — Фабрика здоровья. Все права защищены.</div>
+                    <a href="#" class="footer__politycal">Политика конфиденциальности</a>
+                    <a href="" class="footer__offer">Договор публичной оферты</a>
+                    <a href="" class="footer__pay">Онлайн оплата</a>
+                </div>
+                <div class="footer__links">
+                    <a href="" class="footer__logo">
+                        <img src="" alt="">
+                    </a>
+                    <div class="footer__schedule-1"></div>
+                    <div class="footer__schedule-2"></div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
